--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -72,8 +72,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending access request with Leadership Judge</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--blue">N/A</span> </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request with Leadership Judge</td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">Pending</span> </td>
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
