--- a/app/views/caseaccess/pages/mywork-s2.html
+++ b/app/views/caseaccess/pages/mywork-s2.html
@@ -73,8 +73,8 @@ My work
 
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review access request from Judge [name ?]</td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">Today</span> </td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request from Judge [name?]</td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">Pending</span> </td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
 
