--- a/app/views/caseaccess/pages/mywork-s2.html
+++ b/app/views/caseaccess/pages/mywork-s2.html
@@ -63,7 +63,6 @@ My work
                             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
                         </tr>
                         </thead>
-
                         <tbody class="govuk-table__body">
 
                             <tr class="govuk-table__row">
@@ -74,7 +73,7 @@ My work
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request from Judge [name?]</td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">Pending</span> </td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">PENDING</span> </td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
 
