--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -32,8 +32,8 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>Restricted access - Flow request - Subject to change</br></p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&"">Request access</a><br>Restricted access - Flow request - Subject to change</br></p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&"">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=judiciary&"">My cases</a><br>Restricted access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=judiciary&"">My tasks</a><br>Restricted access - Flow approve - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=judiciary&"">My cases</a><br>Restricted access - Flow request - Subject to change</br>Q. Can you can cancel and access request<br>Q. Is the case acccessible?<br>Q. What notifications have taken place?</p>
+                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=judiciary&"">My tasks</a><br>Restricted access - Flow approve - Subject to change</br>Q. What notifications have taken place?<br>Q. Is name of requester present?</p>
             </div>
 
             <div>
