Case access updates

--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -12,30 +12,38 @@
         <h1 class="govuk-heading-xl">
             Case access prototype
         </h1>
-
-
         <div style="display: flex; margin-top: 80px;">
-
             <div style="width: 500px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
-
-                <h3 class="govuk-heading-s">Scenario 1</h3>
+                <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
                 <p><a target="_blank" href="/caseaccess/pages/results?usertype=judiciary&">Search entry</a><br></p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=judiciary&">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=judiciary&"">Request access</a><br>Challanged access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=judiciary&"">Confirmation</a><br>Challanged access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/mycases-r?usertype=judiciary&"">My cases</a><br>Challanged access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=judiciary&"">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
-
-                <h3 class="govuk-heading-s">Scenario 2</h3>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=judiciary&">Request access</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=judiciary&">Confirmation</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-r?usertype=judiciary&">My cases</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=judiciary&">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
                   <p><a target="_blank" href="/caseaccess/pages/results-s2?usertype=judiciary&">Search entry</a><br></p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>Restricted access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&"">Request access</a><br>Restricted access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&"">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
-                <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=judiciary&"">My cases</a><br>Restricted access - Flow request - Subject to change</br>Q. Can you can cancel and access request<br>Q. Is the case acccessible?<br>Q. What notifications have taken place?</p>
-                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=judiciary&"">My tasks</a><br>Restricted access - Flow approve - Subject to change</br>Q. What notifications have taken place?<br>Q. Is name of requester present?</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>Restricted access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/mycases?usertype=judiciary&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
+                <h3 class="govuk-heading-s">Scenario C - Part 1 - Grant request Specific Access to case (approve)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=judiciary&">My tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="#">Email notifcation - Task Approved</a><br>TO BE ADDED</p>
+                <h3 class="govuk-heading-s">Scenario C - Part 2 - Grant request Specific Access to case (approved)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow request approved - Subject to change</p>
+                <h3 class="govuk-heading-s">Scenario D - Reject specific access to case</h3>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
+                  <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
+                    <p><a target="_blank" href="c">Email notifcation - Task Rejected</a><br>TO BE ADDED</p>
             </div>
-
             <div>
                 <h2 class="govuk-heading-m">Staff</h2>
           <!--      <p><a target="_blank" href="/caseaccess/pages/caselist?usertype=staff&">Caselist</a><br>Subject to change</br></p> -->
@@ -43,19 +51,7 @@
           <!--      <p><a target="_blank" href="/caseaccess/pages/results?usertype=staff&"">Search results</a><br>Subject to change</br></p> -->
           <!--      <p><a target="_blank" href="/caseaccess/pages/resultsmany?usertype=staff&"">Many results</a><br>Subject to change</br></p> -->
             </div>
-
         </div>
-
-
-
-
-        <br>
-        <br>
-
-
-
-
-
     </div>
 </div>
 
