--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -31,15 +31,15 @@ Case details
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-      Your request to access the case file has been sent to the Leadership Judge responsible for this case.</p>
+      Your request to access the case file has been sent to the team responsible for this case.</p>
 
       <p class="govuk-body">
-        You will be notified by [method] when this has been granted.
+        You will be notified by email when this has been granted.
       </p>
       <p class="govuk-body">
         All access requests are logged for auiting purposes.
       </p>
-      <p>Go to <a href="mycases-p" class="govuk-link">My cases</a>.
+      <p>The case will appear in your <a href="mycases" class="govuk-link">My cases</a> tab.
 
 
 
