--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -37,7 +37,7 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases-r">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases-ro">
                 My cases
               </a>
             </li>
@@ -74,7 +74,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">The file will be accessible for 24hrs</td>
                     <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell"><a href="mycases-ro" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                    <td class="govuk-table__cell"><a href="mycases-r" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+                </tr>
+                <tr>
+                    <td colspan="9" class="right"><a href="PA-00321-2018-a" class="right_l">Go to case</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">1542-5226-7383-2772</a></td>
