--- a/app/views/caseaccess/pages/mywork-s2o.html
+++ b/app/views/caseaccess/pages/mywork-s2o.html
@@ -72,11 +72,14 @@ My work
 
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request from Judge Randel-Combeswardly</td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 Feb</span> </td>
-                                <td class="govuk-table__cell"><a href="mywork-s2o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Specific access request from Judge Randel-Combeswardl</td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 feb</span> </td>
+                                <td class="govuk-table__cell"><a href="mywork-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                             </tr>
 
+                            <tr>
+                                <td colspan="8" class="right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
+                            </tr>
 
                         </tbody>
                     </table>
