--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -37,9 +37,9 @@ Case details
         After 24hrs you will need to request access again.
       </p>
       <p class="govuk-body">
-        All access requests are logged for auiting purposes.
+        All access requests are logged for auditing purposes.
       </p>
-      <p>Go to <a href="mycases-r" class="govuk-link">My cases</a>.
+      <p>The case will appear in your <a href="mycases-r" class="govuk-link">My cases</a> tab.
 
 
 
