--- a/app/views/caseaccess/pages/PA-00467-2017-a.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-a.html
@@ -12,25 +12,16 @@ Case details
 
 {% block content %}
 
-<div class="hmcts-banner">
-  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-    <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-  C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-  </svg>
-  <div class="hmcts-banner__message">
-    <span class="hmcts-banner__assistive">information</span>
-    Challange access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
-  </div>
-</div>
+
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
 
 
     <div>
-      <h1 class="govuk-heading-xl">PA/00321/2018</h1>
+      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
     </div>
 
-<!--
+
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
 
@@ -50,7 +41,7 @@ Case details
       </form>
     </div>
 
-    -->
+
 
   </div>
 
@@ -60,8 +51,18 @@ Case details
       Contents
     </h2>
     <ul class="govuk-tabs__list">
+      <li class="govuk-tabs__list-item">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
+          Tasks
+        </a>
+      </li>
+      <li class="govuk-tabs__list-item">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
+          Roles / access
+        </a>
+      </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="#event">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
           Overview
         </a>
       </li>
@@ -186,7 +187,8 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   PA/00321/2018
+                   PA/00467/2017
+
                  </dd>
 
                </div>
@@ -198,7 +200,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    Robert Saddlebrook
+                    	Amelia Chu
                  </dd>
 
                </div>
@@ -210,7 +212,7 @@ Case details
                    Date of birth
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   05/05/1992
+                   01/23/1998
                  </dd>
 
                </div>
@@ -222,7 +224,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   Swedish
+                   British
                  </dd>
 
                </div>
