--- a/app/views/caseaccess/pages/results-s2.html
+++ b/app/views/caseaccess/pages/results-s2.html
@@ -31,7 +31,7 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "style="width: 200px;">Judge</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 150px;">Next hearing</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 130px;">Flag</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 130px;">Access</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
         </tr>
         </thead>
@@ -44,7 +44,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Warden</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">High profile</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00467-2017">View</a></td>
             </tr>
         </tbody>
