--- a/app/views/caseaccess/pages/results.html
+++ b/app/views/caseaccess/pages/results.html
@@ -31,7 +31,7 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "style="width: 200px;">Judge</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 150px;">Next hearing</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 130px;">Flag</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 130px;">Access</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
         </tr>
         </thead>
@@ -43,11 +43,11 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Sensitive</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">View</a></td>
             </tr>
 
-    
+
         </tbody>
     </table>
 
