--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -71,9 +71,9 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request with Leadership Judge</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--red">PENDING</span> </td>
-                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell"> </td>
+                    <td class="govuk-table__cell"></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">1542-5226-7383-2772</a></td>
