--- a/app/views/caseaccess/pages/PA-00467-2017-tc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tc.html
@@ -57,7 +57,7 @@ Case details
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
           Roles / access
         </a>
       </li>
