--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -141,25 +141,59 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices eni
 
 
 
-</div>
+
+
+
+
+
+
+
+
+  <form action="#" method="post" onsubmit="usePage(this, 'bob');">
+    <div class="govuk-form-group">
+      <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+          <h1 class="govuk-fieldset__heading">
+            What would you like to do?
+          </h1>
+        </legend>
+        <div class="govuk-radios">
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-tra">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+              Approve request
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+              Reject request
+            </label>
+          </div>
+
+
+        </div>
+
+      </fieldset>
+    </div>
 
 <div class="govuk-button-group">
-  {{ govukButton({
-    text: "Approve",
-    href: "/caseaccess/pages/PA-00467-2017-tra"
-  }) }}
-
-  {{ govukButton({
-    text: "Reject",
-    classes: "govuk-button--warning",
-    href: "/caseaccess/pages/PA-00467-2017-trr"
-  }) }}
-
+  <button class="govuk-button" data-module="govuk-button" type="submit">
+    Continue
+  </button>
   {{ govukButton({
     text: "Cancel",
     classes: "govuk-button--secondary",
     href: "/caseaccess/pages/PA-00467-2017-t"
   }) }}
-</div>
+</form>
+
+<script type="text/javascript">
+function usePage(frm,nm){
+for (var i_tem = 0, bobs=frm.elements; i_tem < bobs.length; i_tem++)
+if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
+frm.action=bobs[i_tem].value;
+}
+</script>
 
 {% endblock %}
