fixed table css

--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -8,13 +8,13 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">
             Case access prototype
         </h1>
         <div style="display: flex; margin-top: 80px;">
-            <div style="width: 500px;">
-                <h2 class="govuk-heading-m">Judiciary</h2>
+            <div style="width: 800px;">
+                <h2 class="govuk-heading-l">Judiciary</h2>
                 <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
                 <p><a target="_blank" href="/caseaccess/pages/results?usertype=judiciary&">Search entry</a><br></p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=judiciary&">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
@@ -33,24 +33,50 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Restricted access - Flow approve - Subject to change</p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
-              
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=judiciary&">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra?usertype=judiciary&">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac?usertype=judiciary&">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
+
                 <p><a target="_blank" href="#">Email notifcation - Task Approved</a><br>TO BE ADDED</p>
                 <h3 class="govuk-heading-s">Scenario C - Part 2 - Grant request Specific Access to case (approved)</h3>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow request approved - Subject to change</p>
                 <h3 class="govuk-heading-s">Scenario D - Reject specific access to case</h3>
-                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
-                  <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
+                  <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
                     <p><a target="_blank" href="c">Email notifcation - Task Rejected</a><br>TO BE ADDED</p>
             </div>
             <div>
-                <h2 class="govuk-heading-m">Staff</h2>
-          <!--      <p><a target="_blank" href="/caseaccess/pages/caselist?usertype=staff&">Caselist</a><br>Subject to change</br></p> -->
-                <p><a target="_blank" href="/caseaccess/pages/search?usertype=staff&">Search entry</a><br>Subject to change</br></p>
-          <!--      <p><a target="_blank" href="/caseaccess/pages/results?usertype=staff&"">Search results</a><br>Subject to change</br></p> -->
-          <!--      <p><a target="_blank" href="/caseaccess/pages/resultsmany?usertype=staff&"">Many results</a><br>Subject to change</br></p> -->
+                <h2 class="govuk-heading-l">Staff</h2>
+                  <div style="width: 600px;">
+    <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
+                <p><a target="_blank" href="/caseaccess/pages/search?usertype=staff&">Search entry</a></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=staff&">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=staff&">Request access</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=staff&">Confirmation</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-r?usertype=staff&">My cases</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=staff&">Case details</a><br>Challanged access - Flow request - Subject to change</br></p>
+                <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
+                  <p><a target="_blank" href="/caseaccess/pages/results-s2?usertype=staff&">Search entry</a><br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=staff&">Case details</a><br>Restricted access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=staff&">Request access</a><br>Restricted access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=staff&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
+                <h3 class="govuk-heading-s">Scenario C - Part 1 - Grant request Specific Access to case (approve)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=staff&">My tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra?usertype=staff&">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac?usertype=staff&">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
+
+                <p><a target="_blank" href="#">Email notifcation - Task Approved</a><br>TO BE ADDED</p>
+                <h3 class="govuk-heading-s">Scenario C - Part 2 - Grant request Specific Access to case (approved)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Restricted access - Flow request approved - Subject to change</p>
+                <h3 class="govuk-heading-s">Scenario D - Reject specific access to case</h3>
+                <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
+                  <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
+                    <p><a target="_blank" href="c">Email notifcation - Task Rejected</a><br>TO BE ADDED</p>
             </div>
         </div>
     </div>
