--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -76,8 +76,8 @@ My work
                     <td class="govuk-table__cell"></td>
                     <td class="govuk-table__cell"><a href="mycases-r" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                 </tr>
-                <tr>
-                    <td colspan="9" class="right"><a href="PA-00321-2018-a" class="right_l">Go to case</a></td>
+                <tr class="govuk-table__row">
+                    <td colspan="9" class="govuk-table__cell right"><a href="PA-00321-2018-a" class="right_l">Go to case</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">1542-5226-7383-2772</a></td>
