--- a/app/views/caseaccess/pages/mywork-s2o.html
+++ b/app/views/caseaccess/pages/mywork-s2o.html
@@ -77,8 +77,8 @@ My work
                                 <td class="govuk-table__cell"><a href="mywork-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                             </tr>
 
-                            <tr>
-                                <td colspan="8" class="right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
+                            <tr class="govuk-table__row">
+                                <td colspan="8" class="govuk-table__cell right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
                             </tr>
 
                         </tbody>
