--- a/app/views/caseaccess/layoutstaff.html
+++ b/app/views/caseaccess/layoutstaff.html
@@ -51,7 +51,7 @@
         <div style="width:1220px; display: flex; margin: 0 auto;">
 
             <div style="width: 406px; ">
-                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage Cases</a>
+                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage cases</a>
             </div>
 
             <div class="hmcts-header__container" style="width: 812px;">
