--- a/app/views/caseaccess/pages/PA-00467-2017-t.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-t.html
@@ -51,17 +51,17 @@ Case details
       Contents
     </h2>
     <ul class="govuk-tabs__list">
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
+      <li class="govuk-tabs__list-item" >
+        <a class="govuk-tabs__tab_b" href="PA-00467-2017-t">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
+        <a class="govuk-tabs__tab_b" href="PA-00467-2017-ar">
           Roles / access
         </a>
       </li>
-      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+      <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="PA-00467-2017-a">
           Overview
         </a>
