--- a/app/views/caseaccess/pages/PA-00467-2017-tc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tc.html
@@ -52,12 +52,12 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
+        <a class="govuk-tabs__tab_b" href="PA-00467-2017-t">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
+        <a class="govuk-tabs__tab_b" href="PA-00467-2017-ara">
           Roles / access
         </a>
       </li>
